--- a/project-1-yoel/css/main.css
+++ b/project-1-yoel/css/main.css
@@ -1,27 +1,34 @@
+body {
+  font-family: sans-serif;
+}
+input {
+  outline: none;
+}
+
 .container {
   margin: 0 auto;
   padding: 50px;
   text-align: center;
   font-size: 80px;
+  font-weight: bold;
 }
 
-#input {
-  text-align: center;
-}
-
-input[type="number"] {
+.selectme {
   padding: 20px;
   border: 2px solid #ccc;
   -webkit-border-radius: 5px;
   border-radius: 5px;
   font-size: 50px;
+  text-align: center;
+  width: 150px;
 }
 
-input[type="number"]:focus {
+.selectme:focus {
   border-color: #333;
 }
 
-input[type="submit"] {
+.addme,
+.subme {
   padding: 20px;
   background: #ccc;
   border: 0 none;
@@ -29,6 +36,8 @@ input[type="submit"] {
   -webkit-border-radius: 5px;
   border-radius: 5px;
   font-size: 50px;
+  width: 100px;
+  color: white;
 }
 
 #addition:hover {
